Fix spacing

--- a/css/be_buttoned.css
+++ b/css/be_buttoned.css
@@ -286,6 +286,33 @@ h1 {
   position: absolute;
 }
 
+.github {
+  cursor: pointer;
+  position: absolute;
+  /*z-index: 1;*/
+  background: #fff1eb;
+  /*background: blue;*/
+  height: 25px;
+  width: 25px;
+  top: 721px;
+  /*right: 0;*/
+}
+
+.devicon-github-plain {
+  position: absolute;
+  /*top: 720px;*/
+  z-index: 1;
+  /*left: -25px;*/
+  /*background: blue;*/
+  background: #fff1eb;
+  color: #ff3380;
+  text-align: center;
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  font-size: 20px;
+}
+
 .notifications {
   position: absolute;
   padding: 5px;
@@ -369,17 +396,20 @@ width: 380px;
 
 .losing-text {
   /*display: block;*/
-  opacity: 1;
+  /*opacity: 1;*/
   position: absolute;
+  text-align: center;
   /*background: red;*/
   height: 20px;
   z-index: 51;
   top: 254px;
-  right: 654px;
-  margin: 20px 0;
-  padding: 20px;
+  /*margin: 20px 0;*/
+  padding-top: 36px;
+  padding-left: 43px;
   font-family: 'Nixie One', cursive;
   font-size: 20px;
+  height: auto;
+  width: 380px;
   /*color: #001cba;*/
   color: #4f8caf;
   -webkit-animation-delay: 1s;
